%% ============================================================
%% MENTORA APPLICATION — ER Diagram (V1)
%% Generated from Mentora_Schema_V1.txt
%% Notation: || one  o| zero-or-one  o{ zero-or-many  }| one-or-many
%% ============================================================

erDiagram

    %% ========== SECTION 1: GEOGRAPHY & ORGANIZATION ==========
    ownerships {
        UUID id PK
        VARCHAR full_name
        VARCHAR email UK
        VARCHAR ownership_type "corporate|franchisee"
        BOOLEAN is_active
    }
    locations {
        UUID id PK
        UUID ownership_id FK
        VARCHAR name
        VARCHAR address_line1
        VARCHAR city
        VARCHAR state_province
        VARCHAR country
        BOOLEAN is_active
    }
    holidays {
        UUID id PK
        UUID ownership_id FK "nullable=system-wide"
        UUID location_id FK "nullable=all-locations"
        DATE holiday_date
        VARCHAR description
    }

    %% ========== SECTION 2: PLANETS / LEVELS / PRICING ==========
    planets {
        UUID id PK
        VARCHAR name UK "Chess|Maths|English"
        TEXT description
        BOOLEAN is_active
    }
    levels {
        UUID id PK
        UUID planet_id FK
        VARCHAR name "Grade-7|PP|RR"
        INTEGER sort_order
        BOOLEAN is_active
    }
    course_variants {
        UUID id PK
        UUID level_id FK
        INTEGER frequency_per_week
        NUMERIC price
        NUMERIC setup_fee
        VARCHAR image_url
    }
    multi_planet_discounts {
        UUID id PK
        UUID ownership_id FK "nullable=franchisor-default"
        INTEGER planets_count
        NUMERIC discount_pct
    }
    location_course_offerings {
        UUID id PK
        UUID location_id FK
        UUID level_id FK
        BOOLEAN is_active
    }
    price_change_requests {
        UUID id PK
        UUID requesting_ownership_id FK
        UUID course_variant_id FK
        UUID reviewed_by FK "ownerships"
        NUMERIC current_price
        NUMERIC requested_price
        TEXT reason
        VARCHAR status "pending|approved|rejected"
    }
    price_change_attachments {
        UUID id PK
        UUID price_change_request_id FK
        VARCHAR file_url
        VARCHAR file_name
    }

    %% ========== SECTION 3: USERS / ROLES / ACCOUNTS ==========
    roles {
        SERIAL id PK
        VARCHAR name UK
    }
    users {
        UUID id PK
        VARCHAR email UK
        TEXT password_hash
        INTEGER role_id FK
        UUID ownership_id FK "nullable=non-staff"
        BOOLEAN must_reset_pw
        VARCHAR two_fa_phone
    }
    customers {
        UUID id PK
        UUID user_id FK,UK
        VARCHAR full_name
        DATE dob
        VARCHAR phone
        VARCHAR cfc_id
        BOOLEAN terms_accepted
        INTEGER loyalty_points
    }
    customer_locations {
        UUID id PK
        UUID customer_id FK
        UUID location_id FK
        BOOLEAN is_preferred
    }
    members {
        UUID id PK
        UUID customer_id FK
        VARCHAR full_name
        DATE dob
        VARCHAR grade
        VARCHAR cfc_id
        VARCHAR tshirt_size
        BOOLEAN is_self
    }
    coaches {
        UUID id PK
        UUID user_id FK,UK
        UUID ownership_id FK
        VARCHAR full_name
    }
    coach_availability {
        UUID id PK
        UUID coach_id FK
        INTEGER day_of_week "0-6"
        TIME start_time
        TIME end_time
        DATE effective_from
        DATE effective_to
    }
    coach_leaves {
        UUID id PK
        UUID coach_id FK
        DATE leave_date
        VARCHAR reason
    }

    %% ========== SECTION 4: PAYMENT & BILLING ==========
    payment_methods {
        UUID id PK
        UUID customer_id FK
        VARCHAR stripe_pm_id
        CHAR last4
        VARCHAR card_brand
        BOOLEAN is_default
    }
    invoices {
        UUID id PK
        UUID customer_id FK
        UUID payment_method_id FK
        NUMERIC amount
        NUMERIC tax
        NUMERIC discount
        NUMERIC total
        VARCHAR status "pending|paid|failed|refunded|waived"
        VARCHAR stripe_pi_id
    }
    invoice_line_items {
        UUID id PK
        UUID invoice_id FK
        VARCHAR description
        NUMERIC amount
        VARCHAR reference_type "enrollment|setup_fee|event|camp|trial"
        UUID reference_id "polymorphic"
    }

    %% ========== SECTION 5: BATCHES & ENROLLMENTS ==========
    batches {
        UUID id PK
        UUID location_id FK
        UUID level_id FK
        UUID course_variant_id FK
        INTEGER capacity
        INTEGER day_of_week
        TIME start_time
        TIME end_time
        DATE effective_from
        BOOLEAN is_active
    }
    enrollments {
        UUID id PK
        UUID member_id FK
        UUID batch_id FK
        UUID customer_id FK
        UUID invoice_id FK
        BOOLEAN setup_fee_paid
        DATE cancellation_notice
        VARCHAR status "active|cancelled|suspended"
    }
    enrollment_discounts {
        UUID id PK
        UUID enrollment_id FK,UK
        INTEGER planets_count
        NUMERIC discount_pct
    }

    %% ========== SECTION 6: ROSTER ==========
    rosters {
        UUID id PK
        UUID location_id FK
        DATE week_start_date
        TIMESTAMPTZ published_at
    }
    roster_assignments {
        UUID id PK
        UUID roster_id FK
        UUID coach_id FK
        UUID batch_id FK
        DATE session_date
    }

    %% ========== SECTION 7: ATTENDANCE & SESSION NOTES ==========
    sessions {
        UUID id PK
        UUID roster_assignment_id FK
        UUID batch_id FK
        DATE session_date
    }
    attendance {
        UUID id PK
        UUID session_id FK
        UUID member_id FK
        UUID enrollment_id FK
        VARCHAR status "expected|present|absent|makeup"
        TIMESTAMPTZ marked_at
    }
    session_notes {
        UUID id PK
        UUID session_id FK
        UUID coach_id FK
        TEXT topic_covered
        TEXT homework_notes
        TEXT general_notes
    }
    member_session_notes {
        UUID id PK
        UUID session_id FK
        UUID member_id FK
        UUID coach_id FK
        BOOLEAN homework_done
        TEXT private_note
    }

    %% ========== SECTION 8: TRIALS ==========
    trials {
        UUID id PK
        UUID member_id FK
        UUID customer_id FK
        UUID location_id FK
        UUID level_id FK
        UUID batch_id FK
        DATE trial_date
        VARCHAR status "scheduled|completed|no_show|converted"
    }
    trial_assessments {
        UUID id PK
        UUID trial_id FK,UK
        UUID coach_id FK
        UUID recommended_batch_id FK
        TEXT assessment_text
        VARCHAR attachment_url
    }

    %% ========== SECTION 9: EVENTS & CAMPS ==========
    events {
        UUID id PK
        UUID ownership_id FK
        UUID location_id FK "nullable=all"
        VARCHAR title
        VARCHAR event_type "tournament|camp|event"
        DATE start_date
        DATE end_date
        NUMERIC price
        INTEGER capacity
    }
    event_custom_fields {
        UUID id PK
        UUID event_id FK
        VARCHAR field_name
        VARCHAR field_type "text|number|date|boolean|select"
        BOOLEAN is_required
        JSONB options
    }
    event_registrations {
        UUID id PK
        UUID event_id FK
        UUID member_id FK
        UUID customer_id FK
        UUID invoice_id FK
        JSONB custom_data
        VARCHAR status "registered|cancelled|waitlisted"
    }

    %% ========== SECTION 10: LMS ==========
    lms_modules {
        UUID id PK
        UUID level_id FK
        VARCHAR title
        INTEGER sort_order
    }
    lms_topics {
        UUID id PK
        UUID module_id FK
        VARCHAR title
        VARCHAR content_type "text|pdf|youtube"
        TEXT content_body
        VARCHAR content_url
    }
    lms_quizzes {
        UUID id PK
        VARCHAR reference_type "module|topic"
        UUID reference_id "polymorphic"
        VARCHAR title
    }
    lms_quiz_questions {
        UUID id PK
        UUID quiz_id FK
        TEXT question_text
        TEXT correct_answer
        JSONB options
    }
    lms_quiz_attempts {
        UUID id PK
        UUID quiz_id FK
        UUID member_id FK
        NUMERIC score
        TIMESTAMPTZ attempted_at
    }
    member_achievements {
        UUID id PK
        UUID member_id FK
        UUID awarded_by FK "coaches"
        VARCHAR badge_name
        TEXT notes
    }

    %% ========== SECTION 11: NOTIFICATIONS & TICKETS ==========
    notifications {
        UUID id PK
        UUID user_id FK
        VARCHAR type
        VARCHAR title
        TEXT body
        BOOLEAN is_read
        VARCHAR reference_type "polymorphic"
        UUID reference_id "polymorphic"
    }
    support_tickets {
        UUID id PK
        UUID ownership_id FK
        UUID location_id FK
        UUID raised_by FK "users"
        VARCHAR category "IT|Non-IT"
        VARCHAR short_description
        VARCHAR status "open|in_progress|resolved|closed"
    }

    %% ========== SECTION 12: LOYALTY ==========
    loyalty_transactions {
        UUID id PK
        UUID customer_id FK
        INTEGER points_delta "+/-"
        VARCHAR reference_type "polymorphic"
        UUID reference_id "polymorphic"
        VARCHAR description
    }


    %% =====================================================
    %% RELATIONSHIPS
    %% =====================================================

    %% Geography
    ownerships ||--o{ locations               : "owns"
    ownerships ||--o{ holidays                : "scope"
    locations  ||--o{ holidays                : "scope"

    %% Planets / Pricing
    planets    ||--o{ levels                  : "has"
    levels     ||--o{ course_variants         : "priced as"
    ownerships ||--o{ multi_planet_discounts  : "configures"
    locations  ||--o{ location_course_offerings : "offers"
    levels     ||--o{ location_course_offerings : "offered at"

    ownerships      ||--o{ price_change_requests    : "requests"
    course_variants ||--o{ price_change_requests    : "for"
    ownerships      ||--o{ price_change_requests    : "reviews"
    price_change_requests ||--o{ price_change_attachments : "has"

    %% Users / Roles
    roles      ||--o{ users                   : "grants"
    ownerships ||--o{ users                   : "employs"
    users      ||--o| customers               : "is"
    users      ||--o| coaches                 : "is"

    customers  ||--o{ customer_locations      : "uses"
    locations  ||--o{ customer_locations      : "available to"
    customers  ||--o{ members                 : "manages"

    ownerships ||--o{ coaches                 : "employs"
    coaches    ||--o{ coach_availability      : "declares"
    coaches    ||--o{ coach_leaves            : "takes"

    %% Billing
    customers       ||--o{ payment_methods    : "saves"
    customers       ||--o{ invoices           : "billed"
    payment_methods ||--o{ invoices           : "charged via"
    invoices        ||--o{ invoice_line_items : "contains"

    %% Batches & Enrollments
    locations       ||--o{ batches            : "hosts"
    levels          ||--o{ batches            : "for"
    course_variants ||--o{ batches            : "instantiates"

    members    ||--o{ enrollments             : "enrolled in"
    batches    ||--o{ enrollments             : "has"
    customers  ||--o{ enrollments             : "purchased"
    invoices   ||--o{ enrollments             : "billed via"
    enrollments ||--o| enrollment_discounts   : "discounted"

    %% Roster
    locations          ||--o{ rosters             : "for"
    rosters            ||--o{ roster_assignments  : "schedules"
    coaches            ||--o{ roster_assignments  : "assigned"
    batches            ||--o{ roster_assignments  : "covers"

    %% Sessions & Attendance
    roster_assignments ||--o{ sessions            : "creates"
    batches            ||--o{ sessions            : "occurs in"
    sessions           ||--o{ attendance          : "tracks"
    members            ||--o{ attendance          : "attends"
    enrollments        ||--o{ attendance          : "via"
    sessions           ||--o{ session_notes       : "documented in"
    coaches            ||--o{ session_notes       : "writes"
    sessions           ||--o{ member_session_notes : "per-member notes"
    members            ||--o{ member_session_notes : "about"
    coaches            ||--o{ member_session_notes : "by"

    %% Trials
    members    ||--o{ trials                  : "trials"
    customers  ||--o{ trials                  : "books"
    locations  ||--o{ trials                  : "at"
    levels     ||--o{ trials                  : "for"
    batches    ||--o{ trials                  : "in slot"
    trials     ||--o| trial_assessments       : "assessed"
    coaches    ||--o{ trial_assessments       : "assesses"
    batches    ||--o{ trial_assessments       : "recommends"

    %% Events
    ownerships ||--o{ events                  : "hosts"
    locations  ||--o{ events                  : "at"
    events     ||--o{ event_custom_fields     : "asks"
    events     ||--o{ event_registrations     : "has"
    members    ||--o{ event_registrations     : "registered"
    customers  ||--o{ event_registrations     : "registers"
    invoices   ||--o{ event_registrations     : "paid via"

    %% LMS
    levels       ||--o{ lms_modules           : "contains"
    lms_modules  ||--o{ lms_topics            : "contains"
    lms_quizzes  ||--o{ lms_quiz_questions    : "questions"
    lms_quizzes  ||--o{ lms_quiz_attempts     : "attempts"
    members      ||--o{ lms_quiz_attempts     : "takes"
    members      ||--o{ member_achievements   : "earns"
    coaches      ||--o{ member_achievements   : "awards"

    %% Notifications, Tickets, Loyalty
    users      ||--o{ notifications           : "receives"
    ownerships ||--o{ support_tickets         : "owns"
    locations  ||--o{ support_tickets         : "scoped to"
    users      ||--o{ support_tickets         : "raises"
    customers  ||--o{ loyalty_transactions    : "earns / redeems"
